--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>grocery.spring</artifactId>
+    <artifactId>grocery-backend</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
